Fix About Section Mobile

--- a/src/styles/info-module.scss
+++ b/src/styles/info-module.scss
@@ -78,6 +78,7 @@
         padding-bottom: 20px;
         margin-bottom: 10px;
         border-bottom: 2px solid $black;
+        width: 80%;
     }
 
     .info-module__links {
